<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.enclave.recipeproject.app.detail.viewmodel.DetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imv_recipe"
                android:layout_width="@dimen/width_imv_recipe_header"
                android:layout_height="@dimen/height_imv_recipe_header"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_recipe_header"
                android:recipeImg="@{viewModel.img}"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_choose_img"
                android:layout_width="@dimen/width_button_choose"
                android:layout_height="@dimen/height_button_choose"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_top_btn_choose"
                android:background="@color/colorPrimary"
                android:text="@string/choose_image"
                android:textColor="@color/white"
                android:visibility="@{viewModel.isUpdating}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imv_recipe"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_fields"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_choose_img">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="@dimen/width_text_title"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_left_title_detail"
                        android:layout_marginLeft="@dimen/margin_left_title_detail"
                        android:text="@string/name_title"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{safeUnbox(viewModel.isUpdating)}"
                        android:hint="@string/name_hint"
                        android:minHeight="@dimen/height_edt_detail"
                        android:text="@={viewModel.name}"
                        android:textColor="@drawable/edit_text_view" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="@dimen/width_text_title"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_left_title_detail"
                        android:layout_marginLeft="@dimen/margin_left_title_detail"
                        android:text="@string/ingredient_title"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/edt_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{safeUnbox(viewModel.isUpdating)}"
                        android:hint="@string/ingredient_hint"
                        android:inputType="textMultiLine"
                        android:minHeight="@dimen/height_edt_detail"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:text="@={viewModel.ingredients}"
                        android:textColor="@drawable/edit_text_view" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="@dimen/width_text_title"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_left_title_detail"
                        android:layout_marginLeft="@dimen/margin_left_title_detail"
                        android:text="@string/step_title"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:id="@+id/edt_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{safeUnbox(viewModel.isUpdating)}"
                        android:hint="@string/step_hint"
                        android:inputType="textMultiLine"
                        android:minHeight="@dimen/height_edt_detail"
                        android:overScrollMode="always"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:text="@={viewModel.step}"
                        android:textColor="@drawable/edit_text_view" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="@dimen/width_text_title"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_left_title_detail"
                        android:layout_marginLeft="@dimen/margin_left_title_detail"
                        android:text="@string/type_title"
                        android:textColor="@color/colorPrimary" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{safeUnbox(viewModel.isUpdating)}"
                        android:minHeight="@dimen/height_edt_detail"
                        android:textColor="@drawable/edit_text_view"
                        android:visibility="@{!viewModel.isUpdating}"
                        app:listRecipeType="@{viewModel.listRecipeType}"
                        app:typeId="@{viewModel.typeId}"
                        tools:visibility="gone" />

                    <Spinner
                        android:id="@+id/spinner_type"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_edt_detail"
                        android:visibility="@{viewModel.isUpdating}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_save"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_save_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_top_btn_process"
                        android:layout_marginEnd="@dimen/margin_right_btn_process"
                        android:layout_marginRight="@dimen/margin_right_btn_process"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:onClick="@{() -> viewModel.process()}"
                        android:text="@{viewModel.isDetailView?  @string/save : @string/add}"
                        android:textColor="@color/white"
                        android:visibility="@{viewModel.isUpdating}" />

                    <Button
                        android:id="@+id/btn_cancel"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/button_cancel_height"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/margin_right_btn_process"
                        android:layout_marginLeft="@dimen/margin_right_btn_process"
                        android:layout_marginTop="@dimen/margin_top_btn_process"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:onClick="@{() -> viewModel.cancel()}"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:visibility="@{viewModel.isUpdating}" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>